--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "18.11.3",
+    "@types/react": "18.0.21",
     "autoprefixer": "^10.4.12",
     "eslint": "8.26.0",
     "eslint-config-next": "12.3.1",
