--- a/frontendts/tsconfig.json
+++ b/frontendts/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "postcss.config.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "postcss.config.ts"],
   "exclude": ["node_modules"]
 }
