--- a/frontendts/package.json
+++ b/frontendts/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "katex": "^0.16.2",
     "next": "12.3.1",
     "react": "18.2.0",
