--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,4 @@ flake8 = "^5.0.4"
 
 [build-system]
 requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+build-compiler = "poetry.core.masonry.api"
